--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mssql": "^7.1.3",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.6.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
